--- a/site/static/styles/mobile.css
+++ b/site/static/styles/mobile.css
@@ -98,4 +98,13 @@
     margin: 2% 1%;
   }
 
+  .philosophy .half {
+    width: 98%;
+    margin: 2% 1%;
+  }
+
+  .philosophy .half:last-child {
+    margin-left: 0;
+  }
+
 }
